--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "autoprefixer": "7.1.6",
@@ -33,6 +34,7 @@
     "jest": "20.0.4",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.3",
+    "normalize.css": "^8.0.0",
     "object-assign": "4.1.1",
     "popper.js": "^1.14.4",
     "postcss-flexbugs-fixes": "3.2.0",
