--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -34,6 +35,7 @@
     "jest": "20.0.4",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.3",
+    "nodemailer": "^4.6.8",
     "normalize.css": "^8.0.0",
     "object-assign": "4.1.1",
     "popper.js": "^1.14.4",
@@ -45,6 +47,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.4.0",
     "resolve": "1.6.0",
     "sass-loader": "^7.1.0",
     "style-loader": "0.19.0",
