--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react": "^16.4.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
+    "react-lazy-load-image-component": "^1.1.2",
+    "react-preload-image": "^1.0.4",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.4.0",
     "resolve": "1.6.0",
